# qquick3dVertexMode

./: CMakeLists.txt  CubeModel.qml  DynamicModel.qml  PencilMaterial.qml  README.md  Sphere.qml  WaterMaterial.qml  cube_geometry.cpp  cube_geometry.h  dynamic_geometry.cpp  dynamic_geometry.h  dynamicgeometry.cpp  dynamicgeometry.h  main.cpp  main.qml  main_copy.qml  resource.qrc
models/arrow/: Arrow.qml
models/arrow/meshes/: arrow_mesh.mesh
models/sail/: Boat_sail_a.qml
models/sail/meshes/: boat_sail_a_mesh.mesh  sail_mesh.mesh
qml/: common.js
shaders/: basic.frag  noise.frag  pencil.frag  planet.frag  sea.frag  sea.vert  sky.frag  sphere.frag  spot.frag  water.frag  water.vert
